# cgol

./: Cargo.toml  LICENSE  README.md
assets/: cellular.ron
config/: bindings.ron  display.ron
src/: cgol.rs  data.rs  main.rs
src/systems/: camera.rs  cellular_automata.rs  init.rs  mod.rs
