[package]
name = "cgol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amethyst = { version = "0.15.3", features = ["vulkan", "tiles"] }
env_logger = "0.10.1"
log = "0.4.20"
rand = "0.8.5"
rayon = "1.8.0"
